--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,10 @@
         <div>
             <table class="main-table">
                 <tr>
-                    <td class="main-table"><textarea id="myTextarea"></textarea></td>
+                    <td class="main-table main-table-example-td">
+                        <div class="example">
+                        </div>
+                    </td>
                     <td class="main-table main-table-option-td">
                         <table class="inner-table">
                             <tr>
